[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://client/HUD.gd" id="1"]
[ext_resource type="Script" path="res://client/SpriteFontLabel.gd" id="2"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="Root" type="Control" parent="."]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 64.0

[node name="SpriteFontLabel" type="Control" parent="Root"]
script = ExtResource("2")
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 18.0

[node name="RestLabel" type="Control" parent="Root"]
script = ExtResource("2")
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 18.0

[node name="StatsLabel" type="Control" parent="Root"]
script = ExtResource("2")
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 12.0
offset_right = 0.0
offset_bottom = 30.0

[node name="StatsEnergy" type="Control" parent="Root"]
script = ExtResource("2")
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 12.0
offset_right = 0.0
offset_bottom = 30.0

[node name="StatsSuffix" type="Control" parent="Root"]
script = ExtResource("2")
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 12.0
offset_right = 0.0
offset_bottom = 30.0

[node name="HelpTicker" type="Control" parent="Root"]
script = ExtResource("2")
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 28.0
offset_right = 0.0
offset_bottom = 46.0

[node name="RightGun" type="Control" parent="Root"]
script = ExtResource("2")
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 160.0
offset_bottom = 18.0

[node name="RightBomb" type="Control" parent="Root"]
script = ExtResource("2")
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 160.0
offset_bottom = 18.0

[node name="RightWeaponFlags" type="Control" parent="Root"]
script = ExtResource("2")
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 260.0
offset_bottom = 18.0

[node name="RightStatus" type="Control" parent="Root"]
script = ExtResource("2")
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 12.0
offset_right = 360.0
offset_bottom = 30.0
